samples/_failures_safe/1761141406_0a856a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_97ff5b95.c: In function ‘main’:
./samples/SAFE/__tmp_97ff5b95.c:168:13: error: expected ‘;’ at end of input
  168 |     handlers
      |             ^
      |             ;
./samples/SAFE/__tmp_97ff5b95.c:168:5: error: expected declaration or statement at end of input
  168 |     handlers
      |     ^~~~~~~~
